--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Lecture of ITC"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Institute of Technology of Cambodia(ITC)"
   uri              : # URL
   email            : "pen.chentra@itc.edu.kh" 
 
@@ -45,7 +45,7 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "academicpages"
-  kaggle           : # Username  
+  kaggle           : chentra PEN  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
