--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IMG_5898.JPG"
   name             : "Chentra PEN"
   pronouns         : # example: "she/her"  
   bio              : "Lecture of ITC"
