--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "academicpages"
-  kaggle           : chentra PEN  
+  kaggle           : "https://www.kaggle.com/chentrapen"  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
